Add test extension

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,6 @@
 tasks:
   - prebuild: mvn install -DskipTests
+
+vscode:
+  extensions:
+    - vscjava.vscode-java-test@0.24.1:adMLnibuhohxpDp7AmLe9g==
